exports[`test should have toggle--off class applied by default 1`] = `
<div
  className="toggle toggle--off">
  <button
    onClick={[Function anonymous]}>
    Toggle Me
  </button>
</div>
`;

exports[`test should have toggle--on class applied when initialToggledOn specified to true 1`] = `
<div
  className="toggle toggle--on">
  <button
    onClick={[Function anonymous]}>
    Toggle Me
  </button>
</div>
`;
